Reviewing and fixing 'Security Guidelines for Production..' doc