@@ -2,11 +2,12 @@
 
 Given below are the common security guidelines for deploying a WSO2 product in a **production environment.**
 
-Also, see the [production deployment guidelines](https://docs.wso2.com/display/ADMIN44x/Production+Deployment+Guidelines) and any other product-specific guidelines that might come in the respective product's documentation.
+Also, see the [production deployment guidelines]({{base_path}}/install-and-setup/deploying-wso2-api-manager/production-deployment-guidelines/#production-deployment
+-guidelines) and any other product-specific guidelines that might come in the respective product's documentation.
 
--   [WSO2 product-level security](#SecurityGuidelinesforProductionDeployment-WSO2product-levelsecurity)
--   [OS-level security](#SecurityGuidelinesforProductionDeployment-OS-levelsecurity)
--   [Network-level security](#SecurityGuidelinesforProductionDeployment-Network-levelsecurity)
+-   [WSO2 product-level security](#wso2-product-level-security)
+-   [OS-level security](#os-level-security)
+-   [Network-level security](#network-level-security)
 
 ### WSO2 product-level security
 
@@ -20,16 +21,19 @@ Also, see the [production deployment guidelines](https://docs.wso2.com/display/A
 <tbody>
 <tr class="odd">
 <td><p>Apply security updates</p></td>
-<td><p>Apply all the security patches relevant to your product version. If your WSO2 product version is supported by WSO2 Update Manager (WUM), you need to use WUM to get the latest fixes.</p>
+<td><p>Apply all the security patches relevant to your product version. WSO2 API manager is supported by 
+WSO2 Update Manager (WUM) to get updates, since the version of API-M 2.1.0. Hence you need to use WUM to get the latest 
+security patches.</p>
 <ul>
-<li>If your WSO2 product is listed as a WUM-supported product <a href="http://wso2.com/update/">here</a> , follow the instructions in <a href="https://docs.wso2.com/display/updates/Getting+Started">Getting Started with WUM</a> .</li>
-<li><p>If you are using an older WSO2 product version, which is not WUM-supported, you need to download the security patches relevant to your product from the <a href="http://wso2.com/security-patch-releases/">WSO2 Security Patch Release</a> page and apply them to your system manually. The instructions are given in <a href="https://docs.wso2.com/display/ADMIN44x/WSO2+Patch+Application+Process">WSO2 Patch Application Process</a> .</p></li>
+<li>Follow the instructions in <a href="https://docs.wso2.com/display/updates/Getting+Started">Getting Started with 
+WUM</a> .</li>
 </ul>
-!!! note
 <p><strong>Note the following:</strong></p>
 <ul>
-<li>WSO2 releases security patch notifications monthly via the Support Portal and the above mentioned <a href="http://wso2.com/security-patch-releases">WSO2 Security Patch Releases</a> page. However, for highly critical issues, patches are issued immediately to customers.</li>
-<li>The <a href="http://wso2.com/security-patch-releases">WSO2 Security Patch Release</a> page has all the security patches for the latest product versions. WSO2 does not issue patches publicly for older product versions. Community users are encouraged to use the latest product version to receive all the security fixes.</li>
+<li>WSO2 releases security patch notifications monthly via the Support Portal. However, for highly 
+critical issues, patches are issued immediately to customers.</li>
+<li>WSO2 does not issue patches publicly for older product versions. Community users are encouraged to use the 
+latest product version to receive all the security issues resolved until the particular product release.</li>
 </ul>
 </td>
 </tr>
@@ -41,25 +45,30 @@ Also, see the [production deployment guidelines](https://docs.wso2.com/display/A
 <li><p>Use an SHA256 certificate.</p></li>
 <li><p>Make sure that WSO2 default certificates do not exist in any of the keystores in your production environment. For example, be sure to delete the default public certificate in the default trust store that is shipped with the product.</p></li>
 </ul>
-<p>See the <a href="https://docs.wso2.com/display/ADMIN44x/Using+Asymmetric+Encryption#UsingAsymmetricEncryption-recommendations">recommendations for using keystores in WSO2 products</a> for information.<br />
-See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Creating New Keystores</a> for information on how to create and configure your own keys.</p></td>
+<p>See the recommendations for <a href="https://docs.wso2.com/display/ADMIN44x/Using+Asymmetric+Encryption#UsingAsymmetricEncryption-recommendations">Using keystores in WSO2 
+products</a> for more information.<br />
+See <a href="{{base_path}}/administer/product-security/configuring-keystores/keystore-basics/creating-new-keystores
+">Creating New Keystores</a> for information on how to create and configure your own keys and keystores.</p></td>
 </tr>
 <tr class="odd">
 <td>Encrypt passwords in configuration files</td>
 <td><p>WSO2 products use a tool called <strong>Secure Vault</strong> to encrypt the plain-text passwords in configuration files.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Securing+Passwords+in+Configuration+Files">Securing Passwords in Configuration Files</a> for instructions.</p></td>
+<p>See <a href="{{base_path}}/administer/product-security/logins-and-passwords/working-with-encrypted-passwords">Encrypting Passwords in Configuration Files</a> for instructions.</p></td>
 </tr>
 <tr class="even">
 <td><p>Change default ports</p>
 <p><br />
 </p></td>
-<td><p>All the default ports used by WSO2 products are listed in <a href="https://docs.wso2.com/display/ADMIN44x/Default+Ports+of+WSO2+Products">Default Ports of WSO2 Products</a> . For example, the default HTTPS port is 9443 and the HTTP port is 9763. Also, Axis2 services are exposed over the following ports: 8243 and 8280.</p>
-<p>To change a default port, update the <code>              &lt;Offset&gt;             </code> element in the <code>              carbon.             </code> xml file as explained in <a href="https://docs.wso2.com/display/ADMIN44x/Changing+the+Default+Ports">Changing the Default Ports</a> .</p></td>
+<td><p>All the default ports used by WSO2 products are listed in <a href="https://docs.wso2.com/display/ADMIN44x/Default+Ports+of+WSO2+Products">Default Ports of WSO2 Products</a>. For example, the default HTTPS port is 9443 and the HTTP port is 9763. Also, Axis2 services are exposed over the following ports: 8243 and 8280.</p>
+<p>To change a default port, update the <code>&lt;Offset&gt;</code> element in the <code>carbon.xml</code> file as 
+explained in <a href="{{base_path}}/install-and-setup/deploying-wso2-api-manager/changing-the-default-ports-with-offset/">Changing the Default Ports with Offset</a>.</p></td>
 </tr>
 <tr class="odd">
 <td><p>Enable <strong>read-only access</strong> to external user stores (LDAPs etc.)</p></td>
 <td><p>If your WSO2 product is connecting to an external user store, such as Microsoft Active Directory, for the purpose of reading and retrieving user information, be sure to enable read-only access to that user store.</p>
-<p>For example, see <a href="https://docs.wso2.com/display/ADMIN44x/Configuring+a+Read-Only+LDAP+User+Store">Configuring a Read-Only LDAP User Store</a> under <a href="https://docs.wso2.com/display/ADMIN44x/Configuring+User+Stores">Configuring User Stores</a> for instructions.</p></td>
+<p>For more information, please refer <a href="{{base_path}}/administer/product-administration/managing-users-and-roles
+/managing
+-user-stores/configure-primary-user-store/configuring-a-read-only-ldap-user-store/">Configuring a Read-Only LDAP User Store</a>.
 </tr>
 <tr class="even">
 <td><p>Always communicate (with external user stores) over TLS</p></td>
@@ -71,13 +80,18 @@ See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Crea
 </tr>
 <tr class="even">
 <td><p>Configure strong HTTP(S) security</p></td>
-<td><p>To have strong transport-level security, use TLS 1.2 and disable SSL, TLS 1.0 and 1.1. The TLS protocol and strong ciphers are configured for an HTTP connector in the catalina <code>              -server.             </code> xml file (using the <code>              sslEnabledProtocols             </code> and <code>              ciphers             </code> attributes). See the following links for instructions:</p>
+<td><p>To have strong transport-level security, use  disable SSL protocol versions and enable only TLS protocol 
+versions TLS 1, TLS 1.1 and TLS 1.2 . This can be done by replacing <code>sslProtocol = "TLS"</code> property, with 
+<code>sslEnabledProtocols="TLSv1,TLSv1.1,TLSv1.2"</code> under <code>[transport.https.sslHostConfig.properties]</code> in <code>deployment.toml</code> file. And also configure strong ciphers for 
+ThriftAuthenticationService, Tomcat transport and PassThrough transport in <code>deployment.toml</code> file. See the
+ following links for instructions:</p>
 <ul>
-<li><a href="https://docs.wso2.com/display/ADMIN44x/Configuring+Transport+Level+Security">Configuring Transport-Level Security</a></li>
+<li><a href="{{base_path}}/administer/product-security/configuring-transport-level-security/">Configuring Transport Level Security</a></li>
 <li><a href="https://docs.wso2.com/display/ADMIN44x/Supported+Cipher+Suites">Supported Cipher Suites</a></li>
-</ul>
-!!! note
-<p>Note the following:</p>
+</ul>    
+</br>    
+<div style="background-color:#ffffff; padding: 10px;">
+<strong>Note :</strong>
 <ul>
 <li>When deciding on the TLS protocol and the ciphers, consider the compatibility with existing client applications. Imposing maximum security might cause functional problems with client applications.</li>
 <li>Apply ciphers with 256 bits key length if you have applied the Unlimited strength policy. Note that Unlimited strength policy is recommended.</li>
@@ -91,25 +105,31 @@ See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Crea
 <li>GCM based ciphers are recommended over CBC ciphers.</li>
 </ul></li>
 </ul>
+</div>
 </td>
 </tr>
 <tr class="odd">
 <td><p>Remove weak ciphers for PassThrough transport</p></td>
-<td>!!! note
-<p>Applicable only to products that use the PassThrough transport, such as WSO2 API Manager and WSO2 Enterprise Integrator (ESB profile).</p>
-
-<p>Remove any weak ciphers from the PassThrough transport and ensure that the server does not accept connections using those weak ciphers. The PassThrough transport is configured using the <code>              axis2.             </code> xml file (stored in the <code>              &lt;PRODUCT_HOME&gt;/repository/conf/axis2/             </code> directory. You need to add the <code>              PreferredCiphers             </code> parameter under the &quot;Transport Ins (Listeners)&quot; section along with the list of relevant cipher suites.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Configuring+Transport+Level+Security">Configuring the PassThrough Transport</a> for instructions.</p></td>
+<td>
+<p>Remove any weak ciphers from the PassThrough transport and ensure that the server does not accept connections 
+using those weak ciphers. For this, <code>PreferredCiphers</code> should be configured for PassThrough transport, 
+within the <code>deployment.toml</code> file in the <code>&lt;PRODUCT_HOME&gt;/repository/conf/</code> directory.
+<p>Pleser refer <a href="{{base_path}}/administer/product-security/configuring-transport-level-security/">Configuring 
+Transport Level Security</a> for more information.</p>
 </tr>
 <tr class="even">
 <td><p>Update the HTTP Response header &quot;Server&quot; value</p></td>
-<td><p>By default, all WSO2 products pass &quot;WSO2 Carbon Server&quot; as the server value in HTTP headers when sending HTTP responses. This means that information about the WSO2 product stack will be exposed through HTTP responses. It is recommended to change this by configuring the server name in the <code>              catalina             </code> <code>              -server.             </code> xml file.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Configuring+Transport+Level+Security">Configuring Transport Level Security</a> for instructions.</p></td>
+<td><p>By default, all WSO2 products pass &quot;WSO2 Carbon Server&quot; as the server value in HTTP headers when 
+sending HTTP responses. This means that information about the WSO2 product stack will be exposed through HTTP 
+responses. It is recommended to change this by configuring the server name for relavant connectors via 
+<code>deployment.toml</code>.
+<p>Please refer <a href="{{base_path}}/administer/product-security/configuring-transport-level-security/">Configuring 
+Transport Level Security</a> for more information.</p>
 </tr>
 <tr class="odd">
 <td><p>Enabling HTTP Strict Transport Security Headers (HSTS)</p></td>
 <td><p>Be sure that HTTP Strict Transport Security (HSTS) is enabled for all the applications deployed in your WSO2 server. This includes the management console, and any other web applications and/or Jaggery applications.</p>
-<p>Note that (for products based on Carbon 4.4.11 or later versions) HSTS is disabled for the applications with which the product is shipped by default. This is because HSTS validation can interrupt the development processes by validating signatures of self-signed certificates.</p>
+<p>Note that (for WSO2 products based on Carbon 4.4.11 or later versions which implies API-M 2.1.0 and newer) HSTS is disabled for the applications with which the product is shipped by default. This is because HSTS validation can interrupt the development processes by validating signatures of self-signed certificates.</p>
 <p>See the topic on <a href="https://docs.wso2.com/display/ADMIN44x/Securing+Carbon+Applications#SecuringCarbonApplications-EnablingHTTPStrictTransportSecurity(HSTS)Headers">Enabling HTTP Strict Transport Security Headers</a> for instructions.</p></td>
 </tr>
 <tr class="even">
@@ -142,7 +162,10 @@ See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Crea
 <td><p>Enable HostName Verification</p>
 <p><br />
 </p></td>
-<td><p>If your product is using Carbon Kernel 4.4.17 or a later version, make sure that hostname verification is enabled in the product startup script ( <code>              wso2server.sh             </code> in Linux and <code>              wso2server.bat             </code> in Windows) with the <strong>Strict</strong> mode. That is, you need to enable the following parameter:</p>
+<td><p>If your product is using Carbon Kernel 4.4.17 or a later version (which implies API-M 2.2.0 and newer), make 
+sure that hostname verification is enabled in the product startup script ( <code>              wso2server.sh         
+    </code> in Linux and <code>              wso2server.bat             </code> in Windows) with the 
+    <strong>Strict</strong> mode. If it is not, you need to enable it as below:</p>
 <div class="code panel pdl" style="border-width: 1px;">
 <div class="codeContent panelContent pdl">
 <pre class="java" data-syntaxhighlighter-params="brush: java; gutter: false; theme: Confluence" data-theme="Confluence" style="brush: java; gutter: false; theme: Confluence"><code>-Dhttpclient.hostnameVerifier=Strict \</code></pre>
@@ -158,8 +181,8 @@ See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Crea
 </tr>
 <tr class="even">
 <td><p>Enable additional XSS Protection</p></td>
-<td><p>XSS attacks are prevented on the latest WSO2 products by default. This is due to output encoding of the displaying values. However, if additional protection is required, an input validation valve can be configured.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Mitigating+Cross+Site+Scripting+Attacks">Mitigating Cross Site Scripting Attacks</a> for instructions.</p></td>
+<td><p>XSS attacks are prevented on the latest WSO2 products by default. This is done by encoding the displaying values. However, if additional protection is required, an input validation valve can be configured.</p>
+<p>See <a href="{{base_path}}/administer/product-security/mitigating-cross-site-scripting-attacks/">Mitigating Cross Site Scripting Attacks</a> for instructions.</p></td>
 </tr>
 <tr class="odd">
 <td><p>Increase JSESSIONID length</p></td>
@@ -176,53 +199,48 @@ See <a href="https://docs.wso2.com/display/ADMIN44x/Creating+New+Keystores">Crea
 <td><p>Change default admin credentials</p>
 <p><br />
 </p></td>
-<td><p>All WSO2 products have the Administrator account configured by default. The default user nameand password of the administrator account is &quot;admin&quot;. To change the administrator credentials, you need to first sign in tothe management console of the product as &quot;admin&quot;, and then use the <strong>Change Password</strong> option under <strong>Home-&gt;Configure-&gt;User Management-&gt;Users</strong> in the navigator.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Changing+a+Password">Changing a Password</a> for more information on how to change the password of the administrator.</p></td>
+<td><p>All WSO2 products have the Administrator account configured by default. The default user name and password of the administrator account is &quot;admin&quot;. To change the administrator credentials, you need to first sign in to the management console of the product as &quot;admin&quot;, and then use the <strong>Change Password</strong> option under <strong>Home-&gt;Configure-&gt;User Management-&gt;Users</strong> in the navigator.</p>
+<p>See <a href="{{base_path}}/administer/product-security/logins-and-passwords/maintaining-logins-and-passwords/#changing-the-super-admin-credentials">Changing the super admin credentials</a> for more information on how to change the password of the administrator.</p></td>
 </tr>
 <tr class="odd">
 <td><p>Restrict access to the management console</p>
 <p><br />
 </p></td>
-<td><p>Make sure that the permission for signing into the management console is granted only to the users that need to use the management console. For example, in products such as WSO2 Identity Server and WSO2 API Manager, the majority of users only need to login to the connected service providers via the WSO2 product. Therefore, such users should not have permission to log into the management console.</p>
-<p>You can make sure that only administrative users have access to the product's management console. Further, instead of granting all permission to one administrator, you can distribute the responsibilities among administrators by assigning different permissions for conducting various tasks.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Managing+Users%2C+Roles+and+Permissions">Managing Users, Roles and Permissions</a> for instructions.</p></td>
+<td><p>Make sure that the permission for signing into the management console is granted only to the users that need to use the management console. For example, the majority of users only need to login to the connected service providers via the WSO2 product. Therefore, such users should not have permission to log into the management console.</p>
+<p>You need to make sure that only administrative users have access to the product's management console. Further, 
+instead of granting all permission to one administrator, you can distribute the responsibilities among administrators by assigning different permissions for conducting various tasks.</p>
+<p>See <a href="{{base_path}}/administer/product-administration/managing-users-and-roles/managing-user-roles/">Managing User Roles</a> for instructions.</p></td>
 </tr>
 <tr class="even">
 <td><p>Enable log rotation and monitoring</p>
 <p><br />
 </p></td>
-<td><p>Ensure that you have a relevant log rotation scheme to manage logs. Log4J properties for WSO2 products can be configured in the <code>              &lt;PRODUCT_HOME&gt;/repository/conf/log4j.properties             </code> file. To roll the <strong>wso2carbon.log</strong> based on size, the following configurations can be used.</p>
-<div class="code panel pdl" style="border-width: 1px;">
-<div class="codeContent panelContent pdl">
-<pre class="java" data-syntaxhighlighter-params="brush: java; gutter: false; theme: Confluence" data-theme="Confluence" style="brush: java; gutter: false; theme: Confluence"><code>log4j.appender.CARBON_LOGFILE=org.apache.log4j.RollingFileAppender
-log4j.appender.CARBON_LOGFILE=${carbon.home}/repository/logs/${instance.log}/wso2carbon${instance.log}.log
-log4j.appender.CARBON_LOGFILE.MaxFileSize=1000KB
-log4j.appender.CARBON_LOGFILE.MaxBackupIndex=10</code></pre>
-</div>
-</div>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Monitoring+Logs">Monitoring Logs</a> for details on how to configure logging details in WSO2 products.</p></td>
+<td><p>Ensure that you have a relevant log rotation scheme to manage logs. Log4J properties for WSO2 products can be 
+configured in the <code>              &lt;PRODUCT_HOME&gt;/repository/conf/log4j2.properties             </code> file
+. Rollover based on a time period can be configured by changing the below configuration (Default value is 1 day).</p>
+<code>appender.CARBON_LOGFILE.policies.time.interval = 1</code>
+
+<p>You can also configure rollover based on log file size, and also it is possible to limit the number of backup 
+files. See <a href="{{base_path}}/administer/product-administration/monitoring/logging/managing-log-growth/">Managing
+ log growth</a> for details on how to configure log rotation and manage log growth details in WSO2 API Manager.</p></td>
 </tr>
 <tr class="odd">
 <td><p>Prevent Log Forging</p></td>
-<td><p>Log forging can be prevented by appending a UUID to the log message.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Monitoring+Logs">Monitoring Logs</a> for more information on configuring the log4j.properties file.</p></td>
+<td><p>Log forging can be identified by appending a UUID to the log message. The conversion character '%u' can be 
+used in the pattern layout to log a UUID. For example, the log pattern can be set as follwing for <code>AUDIT</code> 
+logs, so that the UUID will be printed at the beginning of each log record.</p>
+<code>appender.AUDIT_LOGFILE.layout.pattern = [%u] TID: [%tenantId] [%d] %5p {&#37;c} - %m%ex%n </code>
+<p>See <a href="{{base_path}}/administer/product-administration/monitoring/logging/setting-up-logging/">Setting up 
+logging in API Manage</a> for more information on configuring logging.</p></td>
 </tr>
 <tr class="even">
 <td><p>Set appropriate JVM parameters</p>
 <p><br />
 </p></td>
-<td><p>The recommended JDK version is JDK 1.7 or 1.8. See the <a href="https://docs.wso2.com/display/ADMIN44x/Production+Deployment+Guidelines#ProductionDeploymentGuidelines-installation_prerequisites">installation pre-requisites</a> for more information.</p>
-<p>For JDK 1.7, set the appropriate Heap and Permgen values for the JVM based on your deployment scenario. These can be set in the <code>              &lt;PRODUCT_HOME&gt;/bin/wso2server.sh             </code> file. You do not need to set this in JDK 1.8 as the MaxPermSize value has been removed from Hotspot JVM.</p>
-<div class="code panel pdl" style="border-width: 1px;">
-<div class="codeHeader panelHeader pdl" style="border-bottom-width: 1px;">
-<strong>For example</strong>
-</div>
-<div class="codeContent panelContent pdl">
-<pre class="java" data-syntaxhighlighter-params="brush: java; gutter: false; theme: Confluence" data-theme="Confluence" style="brush: java; gutter: false; theme: Confluence"><code>-Xms512m -Xmx2048m -XX:MaxPermSize=1024m</code></pre>
-</div>
-</div>
-!!! tip
-<p><strong>Tip</strong> : To run the JVM with 2 GB (-Xmx2048m), you should ideally have about 4GB of memory on the physical machine.</p>
+<td><p>The recommended JDK version is JDK 8 or 11. See the <a 
+href="{{base_path}}/install-and-setup/product-compatibility/#tested-operating-systems-and-jdks">Tested Operating Systems and JDKs</a> for more information.</p>
+<p>You do not need to set the Heap and Permgen values for the JVM since JDK 1.8 onwards as the MaxPermSize value has 
+been removed from Hotspot JVM.</p>
 </td>
 </tr>
 </tbody>
@@ -279,23 +297,25 @@ This section provides the list of OS-level security guidelines for your producti
 </tr>
 <tr class="even">
 <td>Session Data Cleanup</td>
-<td>!!! note
-<p><strong>Note:</strong> This security guideline is specific only to WSO2 Identity Server.</p>
+<td>
+<div style="background-color:#ffffff; padding: 10px;">
+<p><strong>Note     :</strong> This security guideline is specific only to WSO2 Identity Server.</p>
 
-<p>In a production environment, there is a possibility for a deadlock/database lock to occur when running a session data cleanup task in high load scenarios. To mitigate this, configure the following property to clean data in chunks. Configure this property in the <code>              &lt;IS_HOME&gt;/repository/conf/identity/identity.xml             </code> file under <code>              &lt;SessionDataCleanUp&gt;             </code> with the required chunk size. This value is in the number of records and depends on the database type and server capacity. It also depends on the amount of load generated by single sign-on (SSO). A higher value increases the chances of deadlocks and a lower value increases the time it takes for a cleanup.</p>
-<p><br />
-</p>
-<div class="code panel pdl" style="border-width: 1px;">
-<div class="codeContent panelContent pdl">
-<pre class="java" data-syntaxhighlighter-params="brush: java; gutter: false; theme: Confluence" data-theme="Confluence" style="brush: java; gutter: false; theme: Confluence"><code>&lt;DeleteChunkSize&gt;50000&lt;/DeleteChunkSize&gt;</code></pre>
-</div>
-</div>
-<p>For more information on configuring sessions in production, see <a href="https://docs.wso2.com/display/identity-server/Authentication+Session+Persistence">Authentication Session Persistence</a> in the WSO2 Identity Server documentation.</p></td>
+<p>In a production environment, there is a possibility for a deadlock/database lock to occur when running a session 
+data cleanup task in high load scenarios. To mitigate this, configure the following property to clean data in chunks.
+ Configure this property in the <code>              &lt;IS_HOME&gt;/repository/conf/deployment.toml</code> file under
+  <code>&lt;SessionDataCleanUp&gt;</code> with the required chunk size. This value is in the number of records and depends on the database type and server capacity. It also depends on the amount of load generated by single sign-on (SSO). A higher value increases the chances of deadlocks and a lower value increases the time it takes for a cleanup.</p>
+<pre class="java" data-syntaxhighlighter-params="brush: java; gutter: false; theme: Confluence" data-theme="Confluence" style="brush: java; gutter: false; theme: Confluence"><code>[session_data]
+cleanup.clean_expired_session_data_in_chunks_of = 8192</code></pre>
+<p>For more information on configuring sessions in production, see <a href="https://is.docs.wso2.com/en/5.10
+.0/learn/authentication-session-persistence/">Authentication Session Persistence</a> in the WSO2 Identity Server 
+documentation.</p></div></td>
 </tr>
 <tr class="odd">
 <td><p>Make regular backups</p></td>
-<td><p>Make sure to backup important files and archive them continuously.</p>
-<p>See <a href="https://docs.wso2.com/display/ADMIN44x/Production+Deployment+Guidelines#ProductionDeploymentGuidelines-backup_recovery">Backup and Recovery Recommendations</a> for more information.</p></td>
+<td><p>Make sure to backup important files and archive them continuously. See <a 
+href="{{base_path}}/install-and-setup/deploying-wso2-api-manager/production-deployment-guidelines/#backup-and
+-recovery-recommendations">Backup and Recovery Recommendations</a> for more information.</p></td>
 </tr>
 </tbody>
 </table>
@@ -319,7 +339,9 @@ This section provides the list of security guidelines for configuring the netwo
 <td><p>When your WSO2 products are clustered, you need to regularly monitor the health of your server instances. For example, you need to monitor resource-level factors such as the server's resource utilization, response time anomalies, and the number of incoming network connections. Server monitoring will help you identify when additional server instances (failover instances) are required. You can also make decisions about network routing changes that you need to do in order to avoid server downtime.</p>
 <ul>
 <li>See <a href="https://docs.wso2.com/display/ADMIN44x/Key+Concepts">Deployment and Clustering/Key Concepts</a> for information on configuring failover.</li>
-<li>See <a href="https://docs.wso2.com/display/ADMIN44x/Monitoring">Monitoring WSO2 products</a> for information on the monitoring options for WSO2 products.</li>
+<li>See the topics under <code>Administer -> Product Administration -> Monitoring</code> for information on the 
+monitoring options for WSO2 API Manager.
+</li>
 </ul></td>
 </tr>
 <tr class="even">
@@ -348,10 +370,10 @@ This section provides the list of security guidelines for configuring the netwo
 <li>The &quot;/carbon&quot; context is used in WSO2 products to expose the management console (administration console) of the product. The management console is a user interface for performing some of the administrative operations of a product.</li>
 <li>In addition to the &quot;/services&quot; and &quot;/carbon&quot; contexts, be sure to expose only the required applications in your product to users beyond the DMZ level in your network.</li>
 </ul>
-<p><br />
-</p>
-!!! note
+<div style="background-color:#ffffff; padding: 10px;">
+<p><strong>Note     :</strong> </p>
 <p>It is recommended to use a whitelisting approach when allowing access to resources in your product from the DMZ level.</p>
+</div>
 </td>
 </tr>
 </tbody>
